--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Arts, Crafts &amp; Sewing-zlalaa</title>
         <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-        <link href="/u/a.min.css" rel="stylesheet" type="text/css">
+        <link href="/u/a.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <nav class="nav" tabindex="-1" onclick="this.focus()">
@@ -20,7 +21,7 @@
         <div class="container">
             <div class="hero">
                 <h1>Appliques Decorative Patches</h1>
-                <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
+                <h2>Zalalaa Committed to garment accessories lace design,production and sales.</h2>
                 <p>
                     The main products are:water soluble(<b>milk silk,polyester light,cotton embroidery fabric and lace</b>
                     ),bead embroidery,towel embroidery,chiffon,lace,etc.Fashion and high quality lace make customers extraordinary.
