--- a/q/62.html
+++ b/q/62.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +30,7 @@
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187664239146.webp">
                         <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187664239146.webp" alt="Animal"/>
-                        <b>S/N: A62</b>
+                        <b></b>
                     </a>
                 </div>
                 <div class="col c4">
