--- a/404.html
+++ b/404.html
@@ -1,44 +1,57 @@
-<!doctype html>
-<html lang="en">
-<title>404</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<header>
-  <a href="https://zalalaa.com">
-    <div>
-    </div>
-    <h1>
-      zalalaa<span>.</span>com
-    </h1>
-  </a>
-</header>
-<style type="text/css">
-p {color:blue;}
-a {
-  text-decoration: none;
-}
-</style>
-<main class="index">
-<p>404</p>
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2 id="nav-header"></h2>
-        <a class="active" href="https://zalalaa.com">Home</a>
-        <a href="/q/abouts/">About Us</a>
-        <a href="/q/patches/">Applique Patches</a>
-        <a href="/q/article/">Blog</a>
-        <a href="/q/video/">Video</a>
-        <a href="/q/contact/">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  Made in <a href="https://zalalaa.com">Zalalaa.com</a>.
-</footer>
-</div>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Arts, Crafts &amp; Sewing-zlalaa</title>
+        <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+        <link href="/u/a.min.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <nav class="nav" tabindex="-1" onclick="this.focus()">
+            <div class="container">
+                <a class="pagename current" href="/index.html">Zalalaa.com</a>
+                <a href="/q/abouts/index.html">About Us</a>
+                <a href="/q/patches/index.html">Applique Patches</a>
+                <a href="/q/article/index.html">Blog</a>
+                <a href="/q/contact/index.html">Contact Us</a>
+            </div>
+        </nav>
+        <button class="btn-close btn btn-sm">×</button>
+        <div class="container">
+            <div class="hero">
+                <h1>Appliques Decorative Patches</h1>
+                <h3>Zalalaa Committed to garment accessories lace design,production and sales.</h3>
+                <p>
+                    The main products are:water soluble(<b>milk silk,polyester light,cotton embroidery fabric and lace</b>
+                    ),bead embroidery,towel embroidery,chiffon,lace,etc.Fashion and high quality lace make customers extraordinary.
+                </p>
+                <a class="btn btn-b" href="/q/patches/index.html">APPLIQUE PATCHES</a>
+            </div>
+            <div class="row">
+                <div class="col c4">
+                    <a href="/q/70.html" title="Bear Head Cartoon Animal Cloth Sticker,2024-07-18 11:41:43" class="btn btn-a" >
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274578954710.webp" alt="Bear Head Cartoon Animal Cloth Sticker,2024-07-18 11:41:43">
+                        <b>$:29.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/69.html" title="Embroidery bear cartoon animal embroidery cloth sticker,2024-07-18 11:13:23" class="btn btn-a" >
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272517666786.webp" alt="Embroidery bear cartoon animal embroidery cloth sticker,2024-07-18 11:13:23">
+                        <b>$:19.99</b>
+                    </a>
+                </div>
+                <div class="col c4">
+                    <a href="/q/68.html" title="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16" class="btn btn-a" >
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267353962092.webp" alt="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16">
+                        <b>$:69.99</b>
+                    </a>
+                </div>
+				  <a class="btn btn-b" href="/q/patches/index.html">More Product</a>
+            </div>
+            <div class="row">
+               <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
+            </div>
+        </div>
+    </body>
 </html>
